<resources>
    <string name="app_name">Myds</string>
    <string name="copyright_notice">Copyright \u00A9 for 2019 SGSITS ALL Rights reserved</string>
    <string name="member_directory">Member Directory</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="not_registered">create account ? click here</string>
    <string name="login">login</string>

    <string name="name">NAME</string>
    <string name="dob">DATE OF BIRTH</string>
    <string name="mnum">mobile number</string>
    <string name="email" translatable="true">EMAIL ID</string>
    <string name="signup">REGISTRATION</string>
    <string name="enter">Submit</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
