<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/padding_large">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding"
                android:gravity="center"
                android:text="@string/member_directory"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_xxlarge" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="125sp"
                android:layout_height="136dp"
                android:layout_marginTop="@dimen/padding_xxlarge"
                android:src="@drawable/ic_menu_camera" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:background="#ffcdd2"
            android:orientation="vertical"
            android:padding="@dimen/padding_large">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_large"
                android:hint="@string/user_name"
                android:inputType="textPersonName"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_large"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@android:color/black" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="forgot password?"
                android:id="@+id/forget_password"/>

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_large"
                android:background="@color/colorPrimary"
                android:text="@string/login"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_large"
                android:gravity="center"
                android:text="@string/not_registered"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_large" />

            <TextView
                android:id="@+id/copyright"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_large"
                android:gravity="center"
                android:text="@string/copyright_notice"
                android:textSize="@dimen/text_size_large" />
        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
